gl31-master/src/test/deca/codegen/valid/sansobjet/float_int_op.deca
// Description:
//    Test float = int + float
//
// Resultats:
//    Succes : affiche '3.11'
//
// Historique:
//    cree le 16/01/2021
{
    int i = 3;
    float f = i + 1.1e-1f;
    print(f);
}
